testsuite/tests/partial-sigs/should_fail/PatBind3.stderr

PatBind3.hs:6:12: error:
    • Couldn't match type ‘(Bool, w)’ with ‘Char’
      Expected: Maybe ((Bool, w) -> Char)
        Actual: Maybe ((Bool, w) -> (Bool, w))
    • In the expression: Just id
      In a pattern binding: Just foo = Just id
    • Relevant bindings include
        foo :: (Bool, w) -> Char (bound at PatBind3.hs:6:6)
